     mail or mail header (IMAP)
   - Bugfix: First lines of email content are now displayed (IMAP)
   - Bugfix: Displaying mails that do not end with a newline (IMAP)
   - Feature: Only get first "text/plain" part of mail, not the whole mail;
     don't get the whole part if it is very long (IMAP)
   - Feature: Message if there is no "text/plain" part (IMAP)
   

Version 2.0.2
 * Some cosmetic fixes
 * Bug fix in IMAP4 protocol
 * Bug fix in APOP+SSL protocol handling
 * Bug fix in seen mail handling being reset after error
 * Bug fix in image choosing for preferences panel
 * Bug fix when panel is vertically oriented
 * Bug fix in applet or biff font to be always bold
 * Bug fix when asking for password or certificate
 * Bug fix in apop.cc (debug message)
 * Mail count added in gtk applet window title
 * Nicolas Rougier
   - Some fixes for FreeBSD
   - Imap4 bug when copying from another mailbox (folder_ was set to "INBOX")
 * Roland Stigge:
   - updated po/{nl,de}.po
   - finally fixed g++-3.4 compile error (Debian bug #271288)
 * Robert Sowada:
   - Various small changes
   - Bugfix: User can no longer make config file invalid by using XML 
     sensitive characters in strings
   - Bugfixes in setting file permissions
   - File permissions are only set when creating a new config file. So the user
     is able to change to less restrictive permissions if he/she wants to do
     this
   - Bugfix in detection of animation information (via filename)
   - Bugfixes in detection of local mailbox format
   - Bugfix in mh protocol
   - Bugfixes in handling of sound filename
   - Bugfixes in string handling
   - Bugfix in "new mail" and "no mail" tooltips
   - Security Bugfix: DoS attacks by sending unterminated lines anticipated


Version 2.0.1
 * Small bug that prevented gnbuiff to be compiled in GNOME mode


Version 2.0.0
 * gnubiff now officially part of the GNU project
 * Complete redesign of interface inspired by MailNotification
   by Jean-Yves Lefort.