@@ -37,6 +37,8 @@ Version 2.0.3
    - Feature: Only get first "text/plain" part of mail, not the whole mail;
      don't get the whole part if it is very long (IMAP)
    - Feature: Message if there is no "text/plain" part (IMAP)
+   - Bugfix: Setting always status to MAILBOX_ERROR if an error occurs
+     (POP3 & IMAP)
    
 
 Version 2.0.2
